sequelize for user done.
